--- a/10-Regression Models/02-Ridge and Lasso Regression.ipynb
+++ b/10-Regression Models/02-Ridge and Lasso Regression.ipynb
@@ -9,39 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_iris\n",
+    "from sklearn.datasets import load_boston\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import matplotlib.pyplot as plt\n"
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris = load_iris()\n",
-    "X, y = load_iris(return_X_y=True)\n",
+    "boston=load_boston()\n",
+    "X, y = load_boston(return_X_y=True)\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=12)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of MSE: -0.0689701255462469\n"
+      "Mean of MSE: -37.13180746769922\n"
      ]
     }
    ],
@@ -70,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +111,7 @@
        "             scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alpha': 1}\n",
-      "-0.04961936142257062\n"
+      "{'alpha': 1e-15}\n",
+      "-25.42714457259636\n"
      ]
     }
    ],
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +179,7 @@
        "             scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,15 +195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alpha': 1}\n",
-      "-0.04961936142257062\n"
+      "{'alpha': 1e-15}\n",
+      "-25.42714457259636\n"
      ]
     }
    ],
